# playwright_ui_framework_template

./: .gitignore  README.md  conftest.py  constants.py  logging_config.py  pyproject.toml
docs/: Best_Practices_for_UI_Test_Frameworks.md
pages/: base_page.py  home_page.py  login_page.py
tests/: test_example.py  test_home_page.py  test_login_page.py
utils/: data_loader.py
